read me finished, screenshots added, transitions on small devices fixed

--- a/public/scss/_base.scss
+++ b/public/scss/_base.scss
@@ -20,18 +20,21 @@ body {
   min-height: 100vh;
   display: grid;
   place-items: center;
+  overflow: auto;
 }
 
 ::-webkit-scrollbar {
   width: 1rem;
+  height: .5rem;
 }
 
 ::-webkit-scrollbar-track {
-  background: var(--slate-200);
+  background: var(--slate-500);
+  border-radius: 1rem;
 }
 
 ::-webkit-scrollbar-thumb {
   cursor: pointer;
   border-radius: 1rem;
-  background: var(--slate-500);
+  background: var(--slate-200);
 }
