--- a/src/app/ui/result/result.component.scss
+++ b/src/app/ui/result/result.component.scss
@@ -1,9 +1,14 @@
 @use "../../../../public/scss/query-mixin" as mixin;
 
+:host {
+  overflow: hidden;
+}
+
 .result {
+  position: relative;
   background: var(--slate-500);
   border-radius: 0 0 0 8rem;
-  overflow-x: hidden;
+  overflow: hidden;
   height: 100%;
 
   @include mixin.respond(tablet) {
@@ -20,7 +25,7 @@
 
   &__empty {
     height: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
     padding: var(--spacing-500);
     display: flex;
     flex-direction: column;
@@ -68,6 +73,11 @@
     display: flex;
     flex-direction: column;
     gap: var(--spacing-100);
+
+    p.text--xl,
+    p.text--lg {
+      overflow-x: auto;
+    }
   }
 
   &__monthly {
